fix custom checkbox icon misaligned

--- a/scss/_custom-forms.scss
+++ b/scss/_custom-forms.scss
@@ -131,10 +131,10 @@
   .custom-control-input:checked ~ .custom-control-label {
     &::after {
       //Boosted mod
-      top: .65ex;
-      left: .5ex;
-      width: 1.6ex;
-      height: .7ex;
+      top: .4rem;
+      left: .2585rem;
+      width: .8272rem;
+      height: .3619rem;
       border: 3px solid $white;
       border-top: none;
       border-right: none;
