--- a/scss/_o-tables.scss
+++ b/scss/_o-tables.scss
@@ -103,13 +103,6 @@
       width: 1.25rem;
       padding-top: 0;
       padding-bottom: 0;
-
-      .custom-control.custom-checkbox {
-        padding-top: 0;
-        padding-left: 1.25rem;
-        margin-bottom: 0;
-        vertical-align: middle;
-      }
     }
   }
 
